--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,16 +1,25 @@
 server {
     listen 80;
-    server_name localhost;
-    root /var/www/html;
+    server_name _;
+
+    client_max_body_size 1G;
+
+    root /src/public;
+    index index.php;
+
+    access_log /src/docker/nginx/logs/access.log;
+    error_log  /src/docker/nginx/logs/error.log;
 
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
     location ~ \.php$ {
-        fastcgi_pass php:9000;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass app:9000;
+        fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_intercept_errors on;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
