--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -8,8 +8,8 @@ server {
     index index.php;
 
     # ログの管理を改善するためのボリュームマウントを検討
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    access_log /var/logs/nginx/access.log;
+    error_log /var/logs/nginx/error.log;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
