--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:1.27
 
 # Nginxのログディレクトリを作成
-RUN mkdir -p /var/log/nginx/logs
+RUN mkdir -p /src/docker/nginx/logs
 
 # 設定ファイルをコピー
 COPY ./docker/nginx/default.conf /etc/nginx/conf.d/default.conf
