--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # MySQLの設定
-MYSQL_ROOT_PASSWORD=
-MYSQL_DATABASE=
-MYSQL_USER=
-MYSQL_PASSWORD=
+MYSQL_ROOT_PASSWORD=root_pass
+MYSQL_DATABASE=larabase
+MYSQL_USER=lara_user
+MYSQL_PASSWORD=lara_pass
 
 # その他の設定（例: Redisなどの設定）
 # REDIS_PASSWORD=your_redis_password
