--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -16,7 +16,9 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 # 作業ディレクトリの設定
 WORKDIR /var/www/html
 
-# アプリケーションコードのコピー
+# コンテナ内の作業ディレクトリにホストマシンのファイルをコピーする
+# 最初のドットで、 コンテナのビルドコンテキスト内のすべてのファイルをコピーする。
+# 二番目のドットで、 コンテナ内の作業ディレクトリにファイルをコピーする。
 COPY . .
 
 # ストレージディレクトリの権限設定
