--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,9 @@ docker/mysql/data/
 docker/nginx/logs/
 
 # MySQL設定ファイル
-/etc/mysql/my.cnf
+docker/mysql/my.cnf
 
 # SSL証明書関連ファイル
-/etc/mysql/cacert.pem
-/etc/mysql/server-cert.pem
-/etc/mysql/server-key.pem
+docker/mysql/cacert.pem
+docker/mysql/server-cert.pem
+docker/mysql/server-key.pem
