--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -19,7 +19,8 @@ date.timezone = Asia/Tokyo
 [mysqlnd]
 mysqlnd.collect_memory_statistics = off
 
-# zend.assertions = -1 はすべてのアサーションを無効にします。本番環境ではこの設定が適切ですが、開発環境では zend.assertions = 1 にしてデバッグを行うこともあります。
+# zend.assertions = -1はすべてのアサーションを無効にします。
+# 本番環境ではこの設定が適切ですが、開発環境では、zend.assertions = 1にしてデバッグを行うこともあります。
 [Assertion]
 zend.assertions = -1
 
