--- a/docker/mysql/my.cnf
+++ b/docker/mysql/my.cnf
@@ -8,7 +8,7 @@ datadir=/var/lib/mysql
 # MySQL起動時に設定を追加
 init_file=/etc/mysql/init.sql
 
-# SSL設定（環境変数を利用）
+# SSL設定（環境変数を利用、任意でコメントアウトでoff）
 ssl-ca=${SSL_CA_PATH}
 ssl-cert=${SSL_CERT_PATH}
 ssl-key=${SSL_KEY_PATH}
