--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -4,8 +4,8 @@ server {
 
     client_max_body_size 50M;  # 実際のニーズに合わせたサイズに設定
 
-    root /src/public;
-    index index.php;
+    root /var/www/html/laravel-project/public; # nginxコンテナ内にあるpublicフォルダを参照する
+    index index.php index.html index.htm;
 
     # ログの管理を改善するためのボリュームマウントを検討
     access_log /var/log/nginx/access.log;
@@ -17,7 +17,7 @@ server {
 
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass app:9000;
+        fastcgi_pass app:9000; # PHP-FPMコンテナと連携
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
