--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "80:80"  # ホストとコンテナのポートマッピング
     volumes:
       - ./docker/nginx/logs:/var/log/nginx  # logsフォルダに、コンテナ内のアクセスログと、エラーログをマウントする
-      - ./src/laravel-project:/var/www/html/laravel-project # LaravelプロジェクトをNginxコンテナにマウント
+      - ./laravel:/var/www/html/laravel # LaravelプロジェクトをNginxコンテナにマウント
     depends_on:
       - app  # このサービスが依存するサービス
 
@@ -20,7 +20,7 @@ services:
     depends_on:
       - db  # このサービスが依存するサービス
     volumes:
-      - ./src:/var/www/html  # ソースコードのマウント
+      - ./laravel:/var/www/html  # ソースコードのマウント
       - ./docker/php/php.ini:/usr/local/etc/php/php.ini  # PHP設定ファイルのマウント
       
   db:
