--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,6 +1,6 @@
 FROM php:8.3-fpm
 
-# 必要なパッケージのインストールとクリーンアップ(vimは任意)
+# 必要なパッケージのインストールとクリーンアップ
 RUN apt-get update && \
     apt-get install -y \
     git \
@@ -16,11 +16,11 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 # 作業ディレクトリの設定
 WORKDIR /var/www/html
 
-# コンテナ内の作業ディレクトリにホストマシンのファイルをコピーする
-# 最初のドットで、 コンテナのビルドコンテキスト内のすべてのファイルをコピーする。
-# 二番目のドットで、 コンテナ内の作業ディレクトリにファイルをコピーする。
-COPY . .
+# Laravel プロジェクトの作成
+RUN composer create-project --prefer-dist laravel/laravel . "10.*"
 
 # 必要なディレクトリの作成と権限設定
 RUN mkdir -p /var/www/html/storage && \
     chown -R www-data:www-data /var/www/html/storage
+
+# その他の設定やコマンドが必要な場合に追加
