--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - "80:80"  # ホストとコンテナのポートマッピング
     volumes:
-      - ./docker/nginx/logs:/var/log/nginx  # logsフォルダに、コンテナ内のアクセスログと、エラーログをマウントする
-      - ./laravel:/var/www/html/laravel # LaravelプロジェクトをNginxコンテナにマウント
+      - ./docker/nginx/logs:/var/log/nginx  # logsフォルダに、コンテナ内のアクセスログと、エラーログをマウント
+      - ./laravel:/var/www/html # 作業ディレクトリ直下のボリュームをlaravelフォルダにマウント
     depends_on:
       - app  # このサービスが依存するサービス
 
