--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -4,10 +4,10 @@ server {
 
     client_max_body_size 50M;  # 実際のニーズに合わせたサイズに設定
 
-    root /var/www/html/laravel/public; # nginxコンテナ内にあるpublicフォルダを参照する
+    root /var/www/html/public; # nginxコンテナ内にあるpublicフォルダを参照する
     index index.php index.html index.htm;
 
-    # ログの管理を改善するためのボリュームマウントを検討
+    # ログの管理を改善するためのボリュームをマウント
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
