--- a/docker/mysql/my.cnf
+++ b/docker/mysql/my.cnf
@@ -9,9 +9,9 @@ datadir=/var/lib/mysql
 init_file=/etc/mysql/init.sql
 
 # SSL設定（環境変数を利用、任意でコメントアウトでoff）
-ssl-ca=${SSL_CA_PATH}
-ssl-cert=${SSL_CERT_PATH}
-ssl-key=${SSL_KEY_PATH}
+# ssl-ca=${SSL_CA_PATH}
+# ssl-cert=${SSL_CERT_PATH}
+# ssl-key=${SSL_KEY_PATH}
 
 # pidファイルの保存ディレクトリ
 pid-file=/var/run/mysqld/mysqld.pid
